# later

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  popup.html  vite.config.ts
.github/workflows/: release.yml
landing/: index.html
scripts/: create-app-icon.mjs  create-dmg-background.mjs  release.sh
src/: App.tsx  PopupApp.tsx  index.css  popup-main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: HomePage.tsx  LibraryPage.tsx  LinkCard.tsx  LinkRow.tsx  Onboarding.tsx  SaveModal.tsx  Sidebar.tsx  SpotlightBar.tsx  TrayPopup.tsx
src/lib/: ogScrape.ts  supabase.ts
supabase/: schema.sql
supabase/functions/classify-link/: index.ts
worker/: package-lock.json  package.json  tsconfig.json  wrangler.toml
worker/src/: index.ts
