[package]
name = "later"
version = "0.1.0"
edition = "2021"

[lib]
name = "later_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["default-tls", "json"] }
regex = "1"
tokio = { version = "1", features = ["full"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
